.k8s/mani-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mani-backend
  name: mani-backend
  namespace: mani
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: mani-backend
