.k8s/mani-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mani-ingress
  namespace: mani
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  rules:
    - host: mani.kotlin.website
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mani-backend
                port:
                  number: 8080
  tls:
    - hosts:
        - mani.kotlin.website
